@@ -6,6 +6,8 @@ Revision history for Database-Abstraction
 	rewrote selectall_hashref to not just call selectall_hash, that saves data copying
 	Imply 'entry' argument when possible
 	Added the _fatal method
+	selectall_hashref name is misleading, will be selectall_arrayref
+	selectall_hash name is misleading, will be selectall_array
 
 0.29	Mon Aug 18 21:42:25 EDT 2025
 	Moved the test data from data to t/data
